userChrome.css
* {
  font-family: "CommitMono Nerd Font" !important;
}

#urlbar[open][zen-floating-urlbar="true"] {
  max-width: 100vw !important;;
}

.subviewbutton {
  margin: unset;
  width: calc(100% / 4);
  height: 38px;
}

.subviewbutton:hover {
  background-color: transparent !important;
}

#zen-workspaces-button:active {
  transform: unset !important;
}

.zen-workspaces-button {
  justify-content: space-around;
}

#TabsToolbar #firefox-view-button[open] > .toolbarbutton-icon,
.tab-background:is([selected], [multiselected]) {
  box-shadow: none !important;
  border-top: 1px solid #ffffff2d !important;
  border-bottom: 1px solid #0000002d !important;
  background-color: rgba(255, 255, 255, 0.17) !important;
}

#navigator-toolbox {
  width: 274px !important;
  max-width: 270px !important;
}

#titlebar {
  padding-inline: var(--zen-toolbox-padding) !important;
}

#nav-bar {
  margin-inline: var(--zen-toolbox-padding) !important;
  width: calc(100% - (var(--zen-toolbox-padding) * 2)) !important;
}

#zen-sidebar-splitter,
#zen-appcontent-navbar-container,
#identity-permission-box {
  display: none !important;
}

#zen-appcontent-wrapper {
  margin-top: var(--zen-element-separation) !important;
}

#vertical-pinned-tabs-container {
  max-height: unset !important;
}

.browserContainer > findbar {
  position: fixed;
  bottom: 0px;
  margin-bottom: var(--zen-element-separation);
  margin-left: var(--zen-element-separation);
  margin-right: var(--zen-element-separation);
  background: var(--zen-colors-tertiary) !important;
  border-radius: var(--zen-border-radius);
  width: calc(100% - var(--zen-element-separation) * 2);
}

.browserContainer > findbar,
.findbar-textbox {
  border: 1px solid var(--zen-colors-border) !important;
}

@media (-moz-bool-pref: "zen.view.compact") {
  #zen-appcontent-navbar-container {
    display: none !important;
  }

  #zen-appcontent-wrapper,
  #zen-tabbox-wrapper,
  .browserSidebarContainer {
    border: none !important;
    border-radius: 0 !important;
    overflow: hidden !important;
    --zen-element-separation: -1px !important;
    margin-right: -0.5px !important;
  }

  #browser {
    background: none !important;
  }
}

@media not (-moz-bool-pref: "zen.view.compact") {
  .browserSidebarContainer {
    border-radius: var(--zen-border-radius) !important;
  }
}

@media (-moz-bool-pref: "zen.tabs.vertical") {
  #navigator-toolbox:is(
      #navigator-toolbox[zen-user-hover="true"][zen-has-hover],
      #navigator-toolbox[zen-user-hover="true"]:focus-within,
      #navigator-toolbox[zen-user-hover="true"][movingtab],
      #navigator-toolbox[zen-user-hover="true"][flash-popup],
      #navigator-toolbox[zen-user-hover="true"][has-popup-menu],
      #navigator-toolbox[zen-user-hover="true"]:has(
          [open="true"]:not(tab):not(#zen-sidepanel-button)
        ),
      #navigator-toolbox[zen-expanded="true"]:not([zen-user-hover="true"])
    ) {
    & #zen-essentials-container {
      --tab-min-height: 47px !important;
    }
  }
}

#new-tab-button,
#reader-mode-button,
#tracking-protection-icon-container,
#star-button-box {
  display: none !important;
}

#navigator-toolbox {
  box-shadow: none !important;
}

